@@ -16,12 +16,16 @@ src/openmolar/backports/ordered_dict.py
 src/openmolar/dbtools/__init__.py
 src/openmolar/dbtools/accounts.py
 src/openmolar/dbtools/appointments.py
+src/openmolar/dbtools/appt_prefs.py
+src/openmolar/dbtools/brief_patient.py
 src/openmolar/dbtools/calldurr.py
 src/openmolar/dbtools/cashbook.py
 src/openmolar/dbtools/courseHistory.py
 src/openmolar/dbtools/day_class.py
 src/openmolar/dbtools/daybook.py
 src/openmolar/dbtools/daybookHistory.py
+src/openmolar/dbtools/db_notes.py
+src/openmolar/dbtools/db_patients.py
 src/openmolar/dbtools/db_settings.py
 src/openmolar/dbtools/docsimported.py
 src/openmolar/dbtools/docsprinted.py
@@ -126,14 +130,17 @@ src/openmolar/ptModules/tooth_history.py
 src/openmolar/qt4gui/__init__.py
 src/openmolar/qt4gui/colours.py
 src/openmolar/qt4gui/contract_gui_module.py
+src/openmolar/qt4gui/diary_widget.py
 src/openmolar/qt4gui/forum_gui_module.py
 src/openmolar/qt4gui/maingui.py
 src/openmolar/qt4gui/new_patient_gui.py
+src/openmolar/qt4gui/pt_diary_widget.py
 src/openmolar/qt4gui/resources_rc.py
 src/openmolar/qt4gui/schema_updater.py
 src/openmolar/qt4gui/appointment_gui_modules/__init__.py
-src/openmolar/qt4gui/appointment_gui_modules/appointment_drag.py
-src/openmolar/qt4gui/appointment_gui_modules/appt_gui_module.py
+src/openmolar/qt4gui/appointment_gui_modules/clinician_select_model.py
+src/openmolar/qt4gui/appointment_gui_modules/draggable_list.py
+src/openmolar/qt4gui/appointment_gui_modules/list_models.py
 src/openmolar/qt4gui/appointment_gui_modules/pt_diary_treemodel.py
 src/openmolar/qt4gui/charts/__init__.py
 src/openmolar/qt4gui/charts/charts_gui.py
@@ -160,6 +167,7 @@ src/openmolar/qt4gui/compiled_uis/Ui_confirmDentist.py
 src/openmolar/qt4gui/compiled_uis/Ui_crownChoice.py
 src/openmolar/qt4gui/compiled_uis/Ui_customTreatment.py
 src/openmolar/qt4gui/compiled_uis/Ui_daylist_print.py
+src/openmolar/qt4gui/compiled_uis/Ui_diary_widget.py
 src/openmolar/qt4gui/compiled_uis/Ui_editmemos.py
 src/openmolar/qt4gui/compiled_uis/Ui_enter_letter_text.py
 src/openmolar/qt4gui/compiled_uis/Ui_estFooterWidget.py
@@ -181,6 +189,7 @@ src/openmolar/qt4gui/compiled_uis/Ui_newCourse.py
 src/openmolar/qt4gui/compiled_uis/Ui_newSetup.py
 src/openmolar/qt4gui/compiled_uis/Ui_options.py
 src/openmolar/qt4gui/compiled_uis/Ui_ortho_ref_wizard.py
+src/openmolar/qt4gui/compiled_uis/Ui_patient_diary.py
 src/openmolar/qt4gui/compiled_uis/Ui_patient_finder.py
 src/openmolar/qt4gui/compiled_uis/Ui_payments.py
 src/openmolar/qt4gui/compiled_uis/Ui_permissions.py
@@ -213,6 +222,7 @@ src/openmolar/qt4gui/customwidgets/chainLabel.py
 src/openmolar/qt4gui/customwidgets/chartwidget.py
 src/openmolar/qt4gui/customwidgets/currency_label.py
 src/openmolar/qt4gui/customwidgets/dent_hyg_selector.py
+src/openmolar/qt4gui/customwidgets/diary_view_controller.py
 src/openmolar/qt4gui/customwidgets/estimateWidget.py
 src/openmolar/qt4gui/customwidgets/fiveminutetimeedit.py
 src/openmolar/qt4gui/customwidgets/money_line_edit.py
@@ -220,17 +230,21 @@ src/openmolar/qt4gui/customwidgets/notification_widget.py
 src/openmolar/qt4gui/customwidgets/perioChartWidget.py
 src/openmolar/qt4gui/customwidgets/perioToothProps.py
 src/openmolar/qt4gui/customwidgets/resources_rc.py
+src/openmolar/qt4gui/customwidgets/schedule_control.py
 src/openmolar/qt4gui/customwidgets/simple_chartwidget.py
-src/openmolar/qt4gui/customwidgets/staff_diaries.py
 src/openmolar/qt4gui/customwidgets/toothProps.py
 src/openmolar/qt4gui/dialogs/__init__.py
 src/openmolar/qt4gui/dialogs/addTreat.py
 src/openmolar/qt4gui/dialogs/alterAday.py
 src/openmolar/qt4gui/dialogs/alter_todays_notes.py
+src/openmolar/qt4gui/dialogs/appointment_card_dialog.py
 src/openmolar/qt4gui/dialogs/apptOpenDay.py
+src/openmolar/qt4gui/dialogs/appt_mode_dialog.py
+src/openmolar/qt4gui/dialogs/appt_prefs_dialog.py
 src/openmolar/qt4gui/dialogs/appt_wizard_dialog.py
 src/openmolar/qt4gui/dialogs/assistant_select_dialog.py
 src/openmolar/qt4gui/dialogs/base_dialogs.py
+src/openmolar/qt4gui/dialogs/begin_make_appt_dialog.py
 src/openmolar/qt4gui/dialogs/block_wizard.py
 src/openmolar/qt4gui/dialogs/blockslot.py
 src/openmolar/qt4gui/dialogs/bridge_denture.py
@@ -239,8 +253,10 @@ src/openmolar/qt4gui/dialogs/choose_clinicians.py
 src/openmolar/qt4gui/dialogs/choose_tooth_dialog.py
 src/openmolar/qt4gui/dialogs/clinician_select_dialog.py
 src/openmolar/qt4gui/dialogs/completeTreat.py
+src/openmolar/qt4gui/dialogs/duplicate_receipt_dialog.py
 src/openmolar/qt4gui/dialogs/examWizard.py
 src/openmolar/qt4gui/dialogs/finalise_appt_time.py
+src/openmolar/qt4gui/dialogs/find_patient_dialog.py
 src/openmolar/qt4gui/dialogs/hygTreatWizard.py
 src/openmolar/qt4gui/dialogs/medNotes.py
 src/openmolar/qt4gui/dialogs/newBPE.py
@@ -248,6 +264,7 @@ src/openmolar/qt4gui/dialogs/newCourse.py
 src/openmolar/qt4gui/dialogs/payment_dialog.py
 src/openmolar/qt4gui/dialogs/permissions.py
 src/openmolar/qt4gui/dialogs/phrasebook_dialog.py
+src/openmolar/qt4gui/dialogs/print_record_dialog.py
 src/openmolar/qt4gui/dialogs/recall_dialog.py
 src/openmolar/qt4gui/dialogs/saveDiscardCancel.py
 src/openmolar/qt4gui/dialogs/saveMemo.py
@@ -279,7 +296,6 @@ src/openmolar/qt4gui/printing/daylistprint.py
 src/openmolar/qt4gui/printing/estimatePrint.py
 src/openmolar/qt4gui/printing/letterprint.py
 src/openmolar/qt4gui/printing/multiDayListPrint.py
-src/openmolar/qt4gui/printing/notesPrint.py
 src/openmolar/qt4gui/printing/om_printing.py
 src/openmolar/qt4gui/printing/recallprint.py
 src/openmolar/qt4gui/printing/receiptPrint.py
@@ -344,6 +360,7 @@ src/openmolar/resources/icons/logo.png
 src/openmolar/resources/icons/mail_new.png
 src/openmolar/resources/icons/memos.png
 src/openmolar/resources/icons/month.png
+src/openmolar/resources/icons/number1.png
 src/openmolar/resources/icons/pencil.png
 src/openmolar/resources/icons/ps.png
 src/openmolar/resources/icons/save_all.png
@@ -390,6 +407,7 @@ src/openmolar/schema_upgrades/schema1_5to1_6.py
 src/openmolar/schema_upgrades/schema1_6to1_7.py
 src/openmolar/schema_upgrades/schema1_7to1_8.py
 src/openmolar/schema_upgrades/schema1_8to1_9.py
+src/openmolar/schema_upgrades/schema1_9to2_0.py
 src/openmolar/settings/__init__.py
 src/openmolar/settings/_version.py
 src/openmolar/settings/allowed.py
