@@ -1,43 +1,25 @@
-to get to 0.3.2
-
-    recd policy requires finalising and testing
-    DONE
-
-    consider adding day and week forward buttons again.
-    DONE
-
-    remove printNOtesV and printChart functions (no longer necessary)
-    DONE
-
-    also, when printing notes, advise how to change verbosity.
-    DONE
-
-    add an "ignore emergency slots" option
-    DONE for dayview
-    DONE for weekview
+to get to 0.3.3
 
 
-BUGS.
-    when clicking "schedule now" on patient diary - begin_make appt gets called twice
-    FIXED with 793
-
-    does not cycle through active slots properly (day or week views)
-    FIXED with 794
 
 
-    bug when re-entering scheduling mode after all appointments have been made for a patient
-    FIXED
 
-    debug button still present
 
-    joint appointment (exam/hyg) should be added to the "wizard"
-    DONE
 
-    drop appointment doesnt refresh schedule widget
-    DONE!
 
-    drop hygienist appointment on weekview is clinician specific.
-    FIXED	
 
-    toggling between weekview and dayview when making appointments remains an issue.
-    UNABLE TO REPRODUCE NOW - ASSUMED FIXED
+
+
+
+
+
+
+
+
+0.3.2 BUG FIXES.
+    entering notes mode of diary doesnt show notes widget
+        fixed with 799
+    diary widget "advise" function is a problem on older Qts (lucid)
+        fixed with 799
+    user not informed if recall is set to "do not recall"
+        fixed with 799
