@@ -1,3 +1,10 @@
+openmolar (0.3.2+bzr0798-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release (invokes a schema change)
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 02 Feb 2013 21:39:01 +0000
+
+
 openmolar (0.3.1+bzr0776-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
